--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
         android:label="shop0001"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+        <meta-data android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCMKXBI5oTsXVU7VdIiA8R3SsLEHe6h0Yg"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
